testing addition of M220  for slow down to 50% and increase back to previous value during splicing.

--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -9,5 +9,17 @@
       <span>Display Palette 2 Alerts</span>
       <input class="alert-input" type="checkbox" data-bind="checked: settings.plugins.palette2.palette2Alerts">
     </label>
+    <label>
+      <span>Enable Automatic feed-rate slow down during splice?</span>
+      <input class="feedrate-input" type="checkbox" data-bind="checked: settings.plugins.palette2.feedratecontrol">
+    </label>
+    <label>
+      <span>Automatic feed-rate slow down Percentage</span>
+      <input class="feedrateslowpct-input" type="text" data-bind="change: settings.plugins.palette2.feedrateslowpct">
+    </label>
+    <label>
+      <span>Automatic feed-rate normal percentage</span>
+      <input class="feedratenormalpct-input" type="text" data-bind="change: settings.plugins.palette2.feedratenormalpct">
+    </label>
   </div>
 </div>
