Fixed Variable Names and mappings.

--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -15,11 +15,11 @@
     </label>
     <label>
       <span>Automatic feed-rate slow down Percentage</span>
-      <input class="feedrateslowpct-input" type="text" data-bind="change: settings.plugins.palette2.feedrateslowpct">
+      <input class="feedrateslowpct-input" type="text" data-bind="number: settings.plugins.palette2.feedrateslowpct">
     </label>
     <label>
       <span>Automatic feed-rate normal percentage</span>
-      <input class="feedratenormalpct-input" type="text" data-bind="change: settings.plugins.palette2.feedratenormalpct">
+      <input class="feedratenormalpct-input" type="number" data-bind="number: settings.plugins.palette2.feedratenormalpct">
     </label>
   </div>
 </div>
