fixed mappings for settings

--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -15,11 +15,11 @@
     </label>
     <label>
       <span>Automatic feed-rate slow down Percentage</span>
-      <input class="feedrateslowpct-input" type="number" min=1 max=100 data-bind="number: settings.plugins.palette2.feedrateslowpct">
+      <input class="feedrateslowpct-input" type="number" min=1 max=100 data-bind="value: settings.plugins.palette2.feedrateslowpct">
     </label>
     <label>
       <span>Automatic feed-rate normal percentage</span>
-      <input class="feedratenormalpct-input" type="number" min=1 max=100 data-bind="number: settings.plugins.palette2.feedratenormalpct">
+      <input class="feedratenormalpct-input" type="number" min=1 max=100 data-bind="value: settings.plugins.palette2.feedratenormalpct">
     </label>
   </div>
 </div>
