changed wording of auto-connect to auto-reconnect for clarity, started adding the removal of auto-reconnect when clicking of manually select port

--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -2,7 +2,7 @@
   <h4>Palette 2 Settings</h4>
   <div class="checkbox theme-input-label">
     <label>
-      <span>Auto Connect To Palette 2</span>
+      <span>Auto-Reconnect To Palette 2</span>
       <input class="autoconnect-input" type="checkbox" data-bind="checked: settings.plugins.palette2.autoconnect">
     </label>
     <label>
