--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -101,8 +101,12 @@
                             </div>
                         </label>
                         <label>
-                            <span>P2PP Status:</span>
-                            <p class="p2ppstatus" data-bind="text: P2PPStatus"></p>
+                            <span><b>P2PP Status:</b></span><br/>
+                            <p class="p2ppstatus" data-bind="text: P2PPStatus">On Standby</p>
+                        </label>
+                        <label class="form-inline">
+                            <span><b>Feedrate Currently Slowed?</b>
+                            <p class="FeedrateSlowed-input" data-bind="text: FeedrateSlowed"></p></span>
                         </label>
 
     			</div>
