sending error report to email functionality done.

--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -170,3 +170,16 @@ input[type="text"] {
     background: rgba(54, 54, 54, 1);
   }
 }
+
+.error-textarea {
+  resize: none;
+  min-height: 15rem;
+}
+
+.canvas-theme {
+  .error-container {
+    .swal2-title {
+      width: 100%;
+    }
+  }
+}
