--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -77,7 +77,7 @@
 			<hr>
 <!-- P2PP -->
     			<div class="row" style="margin-bottom: 20px">
-    				<h4 class="P2PP-Controls">P2PP</h4>
+    				<h4 class="Advanced-Controls">Advanced Controls</h4>
                         <label>
                           <span>Enable Ping/Pong display on Printer:</span>
                           <input class="showpingpongonprinter-input" type="checkbox" data-bind="checked: ShowPingPongOnPrinter">
@@ -101,8 +101,9 @@
                             </div>
                         </label>
                         <label>
-                            <span><b>P2PP Status:</b></span><br/>
-                            <p class="p2ppstatus" data-bind="text: P2PPStatus">On Standby</p>
+                            <span><b>Advanced Status:</b></span><br/>
+                            <p class="advanced_status" data-bind="text: Advanced_Status">Awaiting Update..</p>
+                            <p class="switch_status" data-bind="text: Advanced_Switches">Awaiting Update..</p>
                         </label>
                         <label class="form-inline">
                             <span><b>Feedrate Currently Slowed?</b>
