- Fixed stying problems preventing the toggling of the Options Screen

--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -9,5 +9,9 @@
       <span>Display Palette 2 Setup Alerts</span>
       <input class="alert-input" type="checkbox" data-bind="checked: settings.plugins.palette2.palette2Alerts">
     </label>
+    <label>
+      <span>Enable Advanced Options</span>
+      <input class="alert-input" type="checkbox" data-bind="checked: settings.plugins.palette2.AdvancedOptions">
+    </label>
   </div>
 </div>
