--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -75,9 +75,9 @@
 				</ul>
 			</div>
 			<hr>
-<!-- P2PP -->
-    			<div class="row" style="margin-bottom: 20px">
-    				<h4 class="Advanced-Controls">Advanced Controls</h4>
+<!-- SKELLATORE -->
+    			<div class="row advanced_options" style="display: none; margin-bottom: 20px;">
+    				<h4>Advanced Options</h4>
                         <label>
                           <span>Enable Ping/Pong display on Printer:</span>
                           <input class="showpingpongonprinter-input" type="checkbox" data-bind="checked: ShowPingPongOnPrinter">
@@ -111,7 +111,7 @@
                         </label>
     			</div>
 			<hr>
-<!-- /P2PP -->
+<!-- / SKELLATORE -->
 			<div class="row" style="margin-bottom: 10px">
 				<h4 class="manual-controls">Manual Controls</h4>
 				<button type="button" class="btn btn-primary" data-bind="click: sendCutCmd, enable: connected">Cut</button>
