--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -2,7 +2,7 @@
 	<div class="distance" style="margin-left: 50px">
 			<div class="row">
 				<h4>Palette 2</h4>
-				<p>Connection Status: <span id="connection-state-msg" class="text-muted" data-bind="text: connectionStateMsg"></span></p>
+				<p>Connection Status: <span id="connection-state-msg" data-bind="text: connectionStateMsg, style: { color: connected() ? 'green' : 'red' }"></span></p>
 				<div style="margin-top: 20px">
 					<div class="serial-ports">
 						<h6 data-bind="click: displayPorts">Manually Select Port</h6>
