--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -183,3 +183,16 @@ input[type="text"] {
     }
   }
 }
+
+.list-of-switches {
+  list-style: none;
+  margin: 0;
+
+  .switch_part {
+    font-weight: 700;
+  }
+
+  .switch_part_status {
+    font-weight: 400;
+  }
+}
