--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -184,21 +184,133 @@ input[type="text"] {
   }
 }
 
-.list-of-switches {
-  list-style: none;
-  margin: 0;
-
-  .switch_part {
-    font-weight: 700;
-  }
-
-  .switch_part_status {
-    font-weight: 400;
-  }
-}
-
 .advanced_options {
   hr {
     margin-left: 0;
+  }
+
+  .list-advanced-options {
+    list-style: none;
+    margin-left: 0;
+
+    .single-advanced-option {
+      margin-bottom: 10px;
+    }
+
+    .input-container {
+      display: flex;
+      align-items: center;
+      width: 60%;
+      justify-content: space-between;
+
+      label {
+        margin-bottom: 0;
+      }
+
+      .interaction-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        input[type="checkbox"].single-advanced-option-input {
+          margin: 0;
+          width: 16px;
+          height: 16px;
+        }
+
+        .advanced-info-container {
+          margin-left: 10px;
+          position: relative;
+          display: flex;
+
+          .advanced-info-icon {
+            margin-right: 0;
+            font-size: 20px;
+            cursor: pointer;
+          }
+          .advanced-info-text {
+            display: none;
+            flex-direction: column;
+            position: absolute;
+            width: 250px;
+            left: 35px;
+            top: -30px;
+            background-color: #f5f5f5;
+            border: 1px solid #363636;
+            border-radius: 3px;
+            padding: 10px;
+
+            &::after,
+            &::before {
+              content: "";
+              position: absolute;
+              display: block;
+              right: 100%;
+              width: 0;
+              height: 0;
+              border-style: solid;
+            }
+
+            // fill
+            &::after {
+              top: 29px;
+              border-color: transparent #f5f5f5 transparent transparent;
+              border-width: 10px;
+            }
+
+            // border
+            &::before {
+              top: 28px;
+              border-color: transparent #363636 transparent transparent;
+              border-width: 11px;
+            }
+
+            .advanced-info-heading {
+              margin: 0 0 3px 0;
+              font-size: 15px;
+            }
+
+            .advanced-info-body {
+              font-size: 13px;
+              p {
+                margin: 0;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .feed-rate-control-options {
+      margin-top: 10px;
+
+      label {
+        font-weight: 700;
+      }
+
+      .feed-rate-speeds {
+        display: flex;
+        flex-direction: column;
+
+        .input-container {
+          margin-bottom: 5px;
+
+          .feedrate-advanced-option-input-container {
+            margin-bottom: 0;
+          }
+        }
+        .input-container:last-child {
+          margin-bottom: 0;
+        }
+      }
+
+      .advanced-single-status {
+        .single-status;
+      }
+
+      .feed-rate-slowed-container {
+        margin-top: -5px;
+      }
+    }
   }
 }
