--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -78,32 +78,67 @@
 <!-- SKELLATORE -->
 			<div class="row advanced_options" data-bind="visible: connected() && Advanced_Options()">
 				<h4>Advanced Options</h4>
-					<label>
-						<span>Enable Ping Display on Printer:</span>
-						<input class="showpingonprinter-input" type="checkbox" data-bind="checked: ShowPingOnPrinter">
-					</label>
-					<label>
-						<span>Enable Feed-Rate control during Splice:</span>
-						<input class="feedratecontrol-input" type="checkbox" data-bind="checked: FeedrateControl">
-					</label>
-					<label class="form-inline">
-						<span>Normal Feed-Rate speed:</span>
-						<div class="input-append">
-							<input class="feedratenormalpct-input input-mini" type="number" min="1" max="999" data-bind="value: FeedrateNormalPct, enable: FeedrateControl">
-							<span class="add-on">%</span>
-						</div>
-					</label>
-					<label class="form-inline">
-							<span>Splicing Feed-Rate speed:</span>
-							<div class="input-append">
-								<input class="feedrateslowpct-input input-mini" type="number" min="1" max="100" data-bind="value: FeedrateSlowPct, enable: FeedrateControl">
-								<span class="add-on">%</span>
+				<ul class="list-advanced-options">
+						<li class="single-advanced-option ping-printer-display">
+							<div class="input-container">
+								<label for="ping-printer-display-input"><span>Enable Ping Display on Printer:</span></label>
+								<div class="interaction-container">
+									<input class="single-advanced-option-input" id="ping-printer-display-input" type="checkbox" data-bind="checked: ShowPingOnPrinter">
+									<div class="advanced-info-container">
+										<i class="material-icons advanced-info-icon" data-bind="click: togglePingDisplayInfo">info_outline</i>
+										<div class="advanced-info-text ping-display-info-text">
+											<h6 class="advanced-info-heading">Display latest PING information on printer screen</h6>
+											<div class="advanced-info-body"><p>By enabling this option, the latest ping information will be sent to your printer. Your printer MUST support M117 GCODE commands for this feature to work.</p></div>
+										</div>
+									</div>
+								</div>
 							</div>
-					</label>
-					<label>
-							<span><b>Advanced Status:</b></span><br/>
-							<p class="advanced_status" data-bind="text: Advanced_Status">Awaiting Update..</p>
-							<span><b>Advanced Switches:</b> <span class="switch_status" data-bind="visible: !Advanced_Switches">Awaiting Update..</span></span><br/>
+						</li>
+						<li class="single-advanced-option feed-rate-control">
+							<div class="input-container">
+								<label for="feed-rate-control-input"><span>Enable Feed Rate Control during Splice:</span></label>
+								<div class="interaction-container">
+									<input class="single-advanced-option-input" id="feed-rate-control-input" type="checkbox" data-bind="checked: FeedrateControl">
+									<div class="advanced-info-container">
+										<i class="material-icons advanced-info-icon" data-bind="click: toggleFeedRateControlDisplayInfo">info_outline</i>
+										<div class="advanced-info-text feed-rate-control-info-text">
+											<h6 class="advanced-info-heading">Control printer FEED RATE</h6>
+											<div class="advanced-info-body"><p>By enabling this option, you may adjust the filament feed rate used by your printer, both DURING and AFTER a splice. This option may help minimize Palette 2 buffer collapses. Your printer MUST support M220 GCODE commands for this feature to work.</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="feed-rate-control-options" data-bind="visible: FeedrateControl">
+								<div class="feed-rate-speeds">
+									<div class="input-container">
+											<label for="normal-feedrate-input"><span>Normal Feed Rate Speed:</span></label>
+											<div class="input-append feedrate-advanced-option-input-container">
+												<input id="normal-feedrate-input" class="input-mini" type="number" min="1" max="999" data-bind="value: FeedrateNormalPct, enable: FeedrateControl">
+												<span class="add-on">%</span>
+											</div>
+									</div>
+									<div class="input-container">
+										<label for="splicing-feedrate-input"><span>Splicing Feed Rate Speed:</span></label>
+										<label>
+												<div class="input-append feedrate-advanced-option-input-container">
+													<input id="splicing-feedrate-input" class="input-mini" type="number" min="1" max="100" data-bind="value: FeedrateSlowPct, enable: FeedrateControl">
+													<span class="add-on">%</span>
+												</div>
+										</label>
+									</div>
+								</div>
+								<div class="advanced-single-status feed-rate-status-container">
+									<h5 class="advanced-single-status-title">Feed Rate Status:</h5>
+									<span class="advanced-single-status-value" data-bind="text: Feedrate_Status">Awaiting Update..</span>
+								</div>
+								<div class="advanced-single-status feed-rate-slowed-container">
+									<h5 class="advanced-single-status-title">Feed Rate Currently Slowed?</h5>
+									<span class="advanced-single-status-value" data-bind="text: FeedrateSlowedText"></span>
+								</div>
+							</div>
+						</li>
+					</ul>
+							{# <span><b>Advanced Switches:</b> <span class="switch_status" data-bind="visible: !Advanced_Switches">Awaiting Update..</span></span><br/>
 							<ul class="list-of-switches">
 								<li class="switch_part">Splice Core: <span class="switch_part_status" data-bind="text: Advanced_Switches().spliceCore"></span></li>
 								<li class="switch_part">Buffer: <span class="switch_part_status" data-bind="text: Advanced_Switches().buffer"></span></li>
@@ -112,13 +147,8 @@
 								<li class="switch_part">Filament 3: <span class="switch_part_status" data-bind="text: Advanced_Switches().filament3"></span></li>
 								<li class="switch_part">Filament 4: <span class="switch_part_status" data-bind="text: Advanced_Switches().filament4"></span></li>
 								<li class="switch_part">Cutting Wheel: <span class="switch_part_status" data-bind="text: Advanced_Switches().cutter"></span></li>
-							</ul>
-					</label>
-					<label class="form-inline">
-							<span><b>Feedrate Currently Slowed?</b>
-							<p class="FeedrateSlowed-input" data-bind="text: FeedrateSlowedText"></p></span>
-					</label>
-				<hr>
+							</ul> #}
+					<hr>
 			</div>
 <!-- / SKELLATORE -->
 			<div class="row" style="margin-bottom: 10px">
