changed wording to make it clearer to users

--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -102,7 +102,7 @@
 										<i class="material-icons advanced-info-icon" data-bind="click: toggleFeedRateControlDisplayInfo">info_outline</i>
 										<div class="advanced-info-text feed-rate-control-info-text">
 											<h6 class="advanced-info-heading">Control printer FEED RATE</h6>
-											<div class="advanced-info-body"><p>By enabling this option, you may adjust the filament feed rate used by your printer, both when Palette 2 IS and IS NOT splicing. Slowing down the feed rate during splices may help minimize Palette 2 buffer collapses. Your printer MUST support M220 GCODE commands for this feature to work.</p></div>
+											<div class="advanced-info-body"><p>By enabling this option, you may adjust the filament feed rate used by your printer, both when Palette 2 IS and IS NOT splicing. Slowing down the feed rate during splices may help minimize Palette 2 buffer collapse.<br><br>The feed rate commands will be sent on the first splice after the print starts. Your printer MUST support M220 GCODE commands for this feature to work.</p></div>
 										</div>
 									</div>
 								</div>
