changed variable names to be consistent with rest of code

--- a/octoprint_palette2/templates/palette2_settings.jinja2
+++ b/octoprint_palette2/templates/palette2_settings.jinja2
@@ -11,7 +11,7 @@
     </label>
     <label>
       <span>Enable Advanced Options</span>
-      <input class="alert-input" type="checkbox" data-bind="checked: settings.plugins.palette2.AdvancedOptions">
+      <input class="alert-input" type="checkbox" data-bind="checked: settings.plugins.palette2.advancedOptions">
     </label>
   </div>
 </div>
