--- a/octoprint_palette2/templates/palette2_tab.jinja2
+++ b/octoprint_palette2/templates/palette2_tab.jinja2
@@ -84,13 +84,34 @@
 								<div class="interaction-container">
 									<input class="single-advanced-option-input" id="ping-printer-display-input" type="checkbox" data-bind="checked: showPingOnPrinter">
 									<div class="advanced-info-container">
-										<i class="material-icons advanced-info-icon" data-bind="click: togglePingDisplayInfo">info_outline</i>
-										<div class="advanced-info-text ping-display-info-text">
+										<i class="material-icons advanced-info-icon" data-bind="click: toggleAdvancedOptionInfo">info_outline</i>
+										<div class="advanced-info-text" id="ping-display-info-text">
 											<h6 class="advanced-info-heading">Display latest PING information on printer screen</h6>
 											<div class="advanced-info-body"><p>By enabling this option, the latest ping information will be sent to your printer. Your printer MUST support M117 GCODE commands for this feature to work.</p></div>
 										</div>
 									</div>
 								</div>
+							</div>
+						</li>
+						<li class="single-advanced-option autoload-filament">
+							<div class="input-container">
+								<label for="autoload-filament-input"><span>Enable Filament Auto-Loading</span></label>
+								<div class="interaction-container">
+									<input class="single-advanced-option-input" id="autoload-filament-input" type="checkbox" data-bind="checked: autoLoad">
+									<div class="advanced-info-container">
+										<i class="material-icons advanced-info-icon" data-bind="click: toggleAdvancedOptionInfo">info_outline</i>
+										<div class="advanced-info-text" id="autoload-filament-text">
+											<h6 class="advanced-info-heading">LOAD your filament automatically into your printer</h6>
+											<div class="advanced-info-body"><p>By enabling this option, you may load your Palette 2 filament automatically into your printer. This functionality will only be enabled during the loading offset. Please make sure you have properly inserted your filament into the extruder before clicking on the button below.</p></div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="autoload-filament-options additional-options" data-bind="visible: autoLoad">
+								<div class="advanced-single-status remaining-loading-offset-container">
+									<h5 class="advanced-single-status-title loading-offset">Loading Offset: <span class="advanced-single-status-value loading-offset-value" data-bind="text: amountLeftToExtrudeText"></span><span class="small-loader-autoload" data-bind="visible: isAutoLoading"></span></h5>
+								</div>
+								<button class="btn btn-primary autoload-button" data-bind="enable: amountLeftToExtrude() > 0 && !isAutoLoading(), click: startAutoLoad, text: autoLoadButtonText"></button>
 							</div>
 						</li>
 						<li class="single-advanced-option feed-rate-control">
@@ -99,15 +120,15 @@
 								<div class="interaction-container">
 									<input class="single-advanced-option-input" id="feed-rate-control-input" type="checkbox" data-bind="checked: feedRateControl">
 									<div class="advanced-info-container">
-										<i class="material-icons advanced-info-icon" data-bind="click: toggleFeedRateControlDisplayInfo">info_outline</i>
-										<div class="advanced-info-text feed-rate-control-info-text">
+										<i class="material-icons advanced-info-icon" data-bind="click: toggleAdvancedOptionInfo">info_outline</i>
+										<div class="advanced-info-text" id="feed-rate-control-info-text">
 											<h6 class="advanced-info-heading">Control printer FEED RATE</h6>
 											<div class="advanced-info-body"><p>By enabling this option, you may adjust the filament feed rate used by your printer, both when Palette 2 IS and IS NOT splicing. Slowing down the feed rate during splices may help minimize Palette 2 buffer collapse.<br><br>Feed rate commands will only be applied once the print starts. Your printer MUST support M220 GCODE commands for this feature to work.</p></div>
 										</div>
 									</div>
 								</div>
 							</div>
-							<div class="feed-rate-control-options" data-bind="visible: feedRateControl">
+							<div class="feed-rate-control-options additional-options" data-bind="visible: feedRateControl">
 								<div class="feed-rate-speeds">
 									<div class="input-container">
 											<label for="normal-feedrate-input"><span>Normal Feed Rate Speed:</span></label>
@@ -127,12 +148,10 @@
 									</div>
 								</div>
 								<div class="advanced-single-status feed-rate-status-container">
-									<h5 class="advanced-single-status-title">Feed Rate Status:</h5>
-									<span class="advanced-single-status-value" data-bind="text: feedRateStatus">Awaiting Update..</span>
+									<h5 class="advanced-single-status-title">Feed Rate Status: <span class="advanced-single-status-value feed-rate-status" data-bind="text: feedRateStatus">Awaiting Update..</span></h5>
 								</div>
 								<div class="advanced-single-status feed-rate-slowed-container">
-									<h5 class="advanced-single-status-title">Feed Rate Currently Slowed?</h5>
-									<span class="advanced-single-status-value" data-bind="text: feedRateSlowedText"></span>
+									<h5 class="advanced-single-status-title">Feed Rate Currently Slowed? <span class="advanced-single-status-value" data-bind="text: feedRateSlowedText"></span></h5>
 								</div>
 							</div>
 						</li>
