--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -60,6 +60,7 @@ input[type="text"] {
 .serial-ports {
   h6 {
     text-decoration: underline;
+    display: inline;
     cursor: pointer;
     font-weight: 400;
     margin: 0;
@@ -91,6 +92,8 @@ input[type="text"] {
 .pong-overview {
   display: flex;
   padding-left: 5px;
+  align-items: center;
+
   &:hover {
     cursor: pointer;
     background-color: whitesmoke;
@@ -101,6 +104,19 @@ input[type="text"] {
     font-size: 16px;
     margin-left: -5px;
     align-self: center;
+  }
+
+  .icon-download-container {
+    margin-left: 25px;
+    padding: 0 3px;
+    line-height: 20px;
+    font-size: 18px;
+    color: #363636;
+    cursor: pointer;
+
+    &:hover {
+      border-bottom: 1px solid #363636;
+    }
   }
 }
 
