--- a/octoprint_palette2/static/less/palette2.less
+++ b/octoprint_palette2/static/less/palette2.less
@@ -1,394 +1,3 @@
-/*Stop Button*/
-select,
-input[type="text"] {
-  margin-bottom: 0;
-}
-
-.cancel-palette-button {
-  margin-bottom: 10px;
-}
-
-.manual-controls {
-  margin-bottom: 15px;
-}
-
-.status-container {
-  list-style: none;
-  margin: 0;
-  margin-left: -5px;
-}
-
-.single-status {
-  display: flex;
-  align-content: center;
-
-  &-title {
-    margin-right: 10px;
-  }
-
-  span {
-    align-self: center;
-  }
-
-  &-value {
-    font-weight: 400;
-  }
-
-  .total-splices {
-    white-space: pre;
-  }
-}
-
-.splice-amount,
-.filament-used {
-  margin-left: 5px;
-}
-
-.current-status {
-  font-weight: 400;
-  font-style: italic;
-}
-
-.highlight-glow {
-  animation: highlight 1.5s 10;
-}
-
-.highlight-glow-border {
-  animation: highlight-border 1.5s 10;
-}
-
-.serial-ports {
-  h6 {
-    text-decoration: underline;
-    display: inline;
-    cursor: pointer;
-    font-weight: 400;
-    margin: 0;
-    transition: 0.3s;
-  }
-}
-
-.serial-ports-list {
-  display: none;
-  width: 255px;
-  margin: 7px 0 5px;
-}
-
-.p2-connect-buttons {
-  margin-top: 5px;
-}
-
-.pings-container,
-.pongs-container {
-  flex-direction: column;
-
-  .single-status-title {
-    width: 15%;
-    margin-right: 23px;
-  }
-}
-
-.ping-overview,
-.pong-overview {
-  display: flex;
-  padding-left: 5px;
-  align-items: center;
-
-  &:hover {
-    cursor: pointer;
-    background-color: whitesmoke;
-    border-radius: 5px;
-  }
-
-  .click-arrow {
-    font-size: 16px;
-    margin-left: -5px;
-    align-self: center;
-  }
-
-  .icon-download-container {
-    margin-left: 25px;
-    padding: 0 3px;
-    line-height: 20px;
-    font-size: 18px;
-    color: #363636;
-    cursor: pointer;
-
-    &:hover {
-      border-bottom: 1px solid #363636;
-    }
-  }
-}
-
-.current-ping,
-.current-pong,
-.current-ping-percentage,
-.current-pong-percentage {
-  align-self: flex-end;
-}
-
-.separator {
-  margin: 0 10px;
-}
-
-.ping-history,
-.pong-history {
-  display: none;
-  max-height: 306px;
-  overflow: scroll;
-  background-color: #fcfcfc;
-  border-radius: 1px;
-  border: 1px solid rgba(54, 54, 54, 1);
-  padding: 3px 15px;
-  margin: 5px 55% 5px 5px;
-  list-style: none;
-
-  .single-ping,
-  .single-pong {
-    width: 100%;
-    display: inline-flex;
-    justify-content: space-between;
-    padding: 5px 0;
-    border-bottom: 1px solid rgba(54, 54, 54, 1);
-
-    .ping-number,
-    .pong-number,
-    .ping-percent,
-    .pong-percent {
-      margin: 0;
-      display: inline;
-    }
-
-    &:last-of-type {
-      border-bottom: none;
-    }
-  }
-}
-
-.loading-overlay-message {
-  color: white;
-  font-size: 16px;
-  text-align: center;
-}
-
-@keyframes highlight {
-  0% {
-    background: #ffff99;
-  }
-  100% {
-    background: none;
-  }
-}
-
-@keyframes highlight-border {
-  0% {
-    color: #ffff99;
-    background: rgba(54, 54, 54, 0.7);
-  }
-  100% {
-    color: white;
-    background: rgba(54, 54, 54, 1);
-  }
-}
-
-.error-textarea {
-  resize: none;
-  min-height: 15rem;
-}
-
-.canvas-theme {
-  .error-container {
-    .swal2-title {
-      width: 100%;
-    }
-  }
-}
-
-.negative-number {
-  color: red;
-}
-
-.advanced_options {
-  hr {
-    margin-left: 0;
-  }
-
-  .list-advanced-options {
-    list-style: none;
-    margin-left: 0;
-    margin-top: 15px;
-
-    .single-advanced-option {
-      margin-top: 5px;
-      margin-bottom: 15px;
-
-      .additional-options {
-        margin-top: 10px;
-        margin-left: 5px;
-      }
-
-      .advanced-single-status {
-        .single-status;
-
-        &-title {
-          margin-right: 0;
-        }
-
-        &-value {
-          margin-left: 10px;
-        }
-      }
-    }
-
-    .input-container {
-      display: flex;
-      align-items: center;
-      width: 60%;
-      justify-content: space-between;
-
-      label {
-        margin-bottom: 0;
-      }
-
-      .interaction-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        input[type="checkbox"].single-advanced-option-input {
-          margin: 0;
-          width: 16px;
-          height: 16px;
-        }
-
-        .advanced-info-container {
-          margin-left: 10px;
-          position: relative;
-          display: flex;
-
-          .advanced-info-icon {
-            margin-right: 0;
-            font-size: 20px;
-            cursor: pointer;
-          }
-          .advanced-info-text {
-            display: none;
-            flex-direction: column;
-            position: absolute;
-            width: 250px;
-            left: 35px;
-            top: -30px;
-            background-color: #f5f5f5;
-            border: 1px solid #363636;
-            border-radius: 3px;
-            padding: 10px;
-
-            &::after,
-            &::before {
-              content: "";
-              position: absolute;
-              display: block;
-              right: 100%;
-              width: 0;
-              height: 0;
-              border-style: solid;
-            }
-
-            // fill
-            &::after {
-              top: 29px;
-              border-color: transparent #f5f5f5 transparent transparent;
-              border-width: 10px;
-            }
-
-            // border
-            &::before {
-              top: 28px;
-              border-color: transparent #363636 transparent transparent;
-              border-width: 11px;
-            }
-
-            .advanced-info-heading {
-              margin: 0 0 3px 0;
-              font-size: 15px;
-            }
-
-            .advanced-info-body {
-              font-size: 13px;
-              p {
-                margin: 0;
-              }
-            }
-          }
-        }
-      }
-    }
-
-    .feed-rate-control-options {
-      label {
-        font-weight: 700;
-      }
-
-      .feed-rate-speeds {
-        display: flex;
-        flex-direction: column;
-
-        .input-container {
-          margin-bottom: 5px;
-
-          .feedrate-advanced-option-input-container {
-            margin-bottom: 0;
-          }
-        }
-        .input-container:last-child {
-          margin-bottom: 0;
-        }
-      }
-
-      .feed-rate-status {
-        font-style: italic;
-      }
-
-      .feed-rate-slowed-container {
-        margin-top: -5px;
-      }
-    }
-
-    .autoload-filament-options {
-      .loading-offset {
-        margin-top: 0;
-      }
-
-      .autoload-button {
-        padding-left: 20px;
-        padding-right: 20px;
-      }
-
-      .loading-offset-value {
-        margin-right: 5px;
-      }
-    }
-  }
-}
-
-.small-loader-autoload {
-  display: inline-flex;
-  overflow: hidden;
-  margin-top: 2px;
-  margin-left: 5px;
-  width: 11px;
-  height: 11px;
-  border: 2px solid fade(#363636, 40%);
-  border-top-color: #363636;
-  border-radius: 50%;
-  animation: rotate360 1.5s linear infinite;
-}
-
-@keyframes rotate360 {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import "./partials/utils.less";
+@import "./partials/main.less";
+@import "./partials/advancedOptions.less";
