fixed serial-ports inline bug, advanced status not resetting when new print starts, pings/pongs not properly resetting on UI

--- a/octoprint_palette2/static/less/partials/main.less
+++ b/octoprint_palette2/static/less/partials/main.less
@@ -57,6 +57,9 @@ input[type="text"] {
 }
 
 .serial-ports {
+  display: inline-flex;
+  flex-direction: column;
+
   h6 {
     text-decoration: underline;
     display: inline;
