--- a/octoprint_palette2/static/less/partials/advancedOptions.less
+++ b/octoprint_palette2/static/less/partials/advancedOptions.less
@@ -14,7 +14,7 @@
 
       .additional-options {
         margin-top: 10px;
-        margin-left: 5px;
+        margin-left: 10px;
       }
 
       .advanced-single-status {
@@ -128,6 +128,7 @@
 
           .feedrate-advanced-option-input-container {
             margin-bottom: 0;
+            margin-right: 5px;
           }
         }
         .input-container:last-child {
